<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchResultsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artist_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:context=".ui.search.SearchMatchActivity"
            tools:listitem="@layout/artist_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
