...
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/save"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            tools:context=".ui.album.albums.TopAlbumActivity"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/album_item" />

        <Button
...
